[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "ansys-engineeringworkflow-api"
version = "0.1.dev0"
description = "API specification for an engineering workflow engine"
readme = "README.rst"
requires-python = ">=3.9,<4"
license = {file = "LICENSE"}
authors = [{name = "ANSYS, Inc.", email = "pyansys.core@ansys.com"}]
maintainers = [{name = "ANSYS, Inc.", email = "pyansys.core@ansys.com"}]

classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "anyio>=3.6",
    "numpy>=1.20.3",
    "pyansys-tools-variableinterop>=0.1.0",
]

[project.optional-dependencies]
doc = [
    "ansys-sphinx-theme==0.16.2",
    "anyio==4.3.0",
    "numpy==1.26.4",
    "numpydoc==1.6.0",
    "pyansys-tools-variableinterop==0.1.1",
    "Sphinx==7.2.6",
    "sphinx-copybutton==0.5.2",
    "sphinx-design==0.5.0",
    "sphinx-gallery==0.15.0",
    "sphinx-notfound-page==1.0.0",
    "sphinx-autoapi==3.1.0a2",
    "pytest-sphinx==0.6.0",
]

tests = [
    "anyio==4.3.0",
    "numpy==1.26.4",
    "pytest==8.1.1",
    "pytest-cov==4.1.0",
    "pyansys-tools-variableinterop==0.1.1",
]

[tool.flit.module]
name = "ansys.engineeringworkflow.api"

[project.urls]
Source = "https://github.com/ansys/ansys-engineeringworkflow-api"
Issues = "https://github.com/ansys/ansys-engineeringworkflow-api/issues"
Discussions = "https://github.com/ansys/ansys-engineeringworkflow-api/discussions"

[tool.black]
line-length = 100

[tool.isort]
profile = "black"
force_sort_within_sections = true
line_length = 100
default_section = "THIRDPARTY"
src_paths = ["doc", "src", "tests"]

[tool.docformatter]
in-place = true
pre-summary-newline = true
wrap-descriptions = 100
wrap-summaries = 100

[tool.coverage.run]
source = ["ansys.engineeringworkflow.api"]

[tool.coverage.report]
show_missing = true

[tool.pytest.ini_options]
minversion = "7.1"
addopts = "-ra --cov=ansys.engineeringworkflow.api --cov-report html:.cov/html --cov-report xml:.cov/xml --cov-report term -vv"
testpaths = [
    "tests",
]